--- a/res/layout/fragment_stats.xml
+++ b/res/layout/fragment_stats.xml
@@ -12,26 +12,26 @@
         <TextView 
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:text="@string/stats_title_label"
-	        android:layout_marginLeft="12dp"
+	        android:text="@string/badge_title_label"
+	        android:layout_marginLeft="17dp"
 	        android:layout_marginTop="15dp"
 	        android:textSize="18sp"
 	        android:textStyle="bold"
-	        android:shadowColor="#FFF"
+	        android:shadowColor="#fff"
 	        android:shadowDx="-1"
 	        android:shadowDy="1"
 	        android:shadowRadius="1"
-	        android:textColor="#444" />
+	        android:textColor="#565656" />
         
         <RelativeLayout
 	        android:id="@+id/CurrentBadgeContainer"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
             android:background="@drawable/bg_rounded"
-	        android:layout_marginTop="8dp"
-	        android:layout_marginLeft="10dp"
-	        android:layout_marginRight="10dp"
-	        android:layout_marginBottom="10dp"
+	        android:layout_marginTop="10dp"
+	        android:layout_marginLeft="15dp"
+	        android:layout_marginRight="15dp"
+	        android:layout_marginBottom="15dp"
 	        android:padding="10dp" >
 	
 	        <ImageView
@@ -85,19 +85,28 @@
 	            
 	    </RelativeLayout>
         
-        <LinearLayout
-            android:id="@+id/StatsAchievementsContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:background="@drawable/bg_rounded"
-            android:orientation="vertical" />
-
+        <TextView 
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/stats_title_label"
+	        android:layout_marginLeft="17dp"
+	        android:layout_marginTop="15dp"
+	        android:textSize="18sp"
+	        android:textStyle="bold"
+	        android:shadowColor="#fff"
+	        android:shadowDx="-1"
+	        android:shadowDy="1"
+	        android:shadowRadius="1"
+	        android:textColor="#565656" />
+        
         <LinearLayout
             android:id="@+id/SimpleStatsContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+	        android:layout_marginTop="10dp"
+	        android:layout_marginLeft="15dp"
+	        android:layout_marginRight="15dp"
+	        android:layout_marginBottom="15dp"
             android:background="@drawable/bg_rounded"
             android:orientation="vertical" />
     </LinearLayout>
