--- a/res/layout/dialog_level_success.xml
+++ b/res/layout/dialog_level_success.xml
@@ -72,7 +72,7 @@
             android:layout_centerHorizontal="true"
             android:layout_marginTop="4dp"
             android:gravity="center"
-            android:text="+ 2 hints"
+            android:text="@string/level_success_gain_hint"
             android:textColor="#aaa"
             android:textSize="18sp"
             android:textStyle="bold" />
