--- a/res/layout/fragment_stats.xml
+++ b/res/layout/fragment_stats.xml
@@ -102,7 +102,10 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/bg_rounded"
             android:orientation="vertical"
-            android:padding="10dp" >
+            android:paddingTop="10dp"
+            android:paddingLeft="12dp"
+            android:paddingRight="12dp"
+            android:paddingBottom="10dp"  >
 
             <TextView
                 android:id="@+id/stats_title_label"
