--- a/res/layout/fragment_stats.xml
+++ b/res/layout/fragment_stats.xml
@@ -21,7 +21,7 @@
             android:paddingTop="10dp"
             android:paddingLeft="12dp"
             android:paddingRight="12dp"
-            android:paddingBottom="15dp" >
+            android:paddingBottom="12dp" >
 
             <TextView
                 android:id="@+id/badge_title_label"
@@ -56,7 +56,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/badge_title_label_separator"
-                android:layout_marginBottom="25dp"
+                android:layout_marginBottom="24dp"
                 android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/BadgeIcon"
                 android:gravity="center_horizontal"
@@ -78,17 +78,17 @@
             <TextView
                 android:id="@+id/BadgeProgressLabel"
                 android:layout_width="match_parent"
-                android:layout_height="14dp"
+                android:layout_height="wrap_content"
                 android:layout_above="@+id/BadgeProgress"
                 android:layout_alignLeft="@+id/BadgeProgress"
                 android:layout_alignRight="@+id/BadgeProgress"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="3dp"
                 android:layout_marginRight="8dp"
                 android:adjustViewBounds="true"
                 android:alpha="0.9"
                 android:gravity="right"
                 android:src="@drawable/bg_section_progress_small"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
