- Added test launchers - Clicking on cleared level titles doesn't show keyboard anymore - Fixed plurals and fr strings - Trimed and replaced multiple spaces by one on user input response - Added picture number between previous and next arrows buttons

--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -171,6 +171,41 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
+        <View
+            android:id="@+id/levelTutorialMask"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#66000000"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/levelTutorialLayout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#fff"
+            android:visibility="gone" 
+            android:orientation="vertical">
+        
+            <TextView 
+                android:id="@+id/levelTutorialTitle"
+                android:layout_width="match_parent"
+            	android:layout_height="wrap_content"
+            	android:text="Explications: 1/4" />
+
+            <TextView 
+                android:id="@+id/levelTutorialExplanation"
+                android:layout_width="match_parent"
+            	android:layout_height="wrap_content"
+            	android:text="Explications: 1/4" />
+            
+            
+            <Button 
+                android:id="@+id/levelTutorialNext"
+                android:layout_width="match_parent"
+            	android:layout_height="wrap_content"
+            	android:text="Ok" />
+            
+		</LinearLayout>
         
     </RelativeLayout>
 
