--- a/res/layout/ab_view_level.xml
+++ b/res/layout/ab_view_level.xml
@@ -62,13 +62,23 @@
             android:background="@null"
             android:scaleType="fitCenter"
             android:src="@drawable/previous" />
-
+        
+        <TextView
+            android:id="@+id/current_level_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="n°8"
+            android:textColor="#666"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+        
         <ImageButton
             android:id="@+id/next_level_button"
             android:layout_width="60dp"
             android:layout_height="40dp"
             android:scaleType="fitCenter"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="5dp"
             android:background="@null"
             android:src="@drawable/next" />
     </LinearLayout>
