Added link to wiki fragment

--- a/res/layout/ab_view_level.xml
+++ b/res/layout/ab_view_level.xml
@@ -1,54 +1,6 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <LinearLayout
-        android:id="@+id/ab_level_difficulty_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:gravity="center" >
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ab_level_hints_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/ab_level_hints_nb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:shadowColor="#FFF"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:textColor="#636363"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/ab_level_hints_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="-4dp"
-            android:includeFontPadding="false"
-            android:shadowColor="#FFF"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="hints"
-            android:textColor="#616161"
-            android:textSize="14sp"
-            android:textStyle="normal" />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/navigation_buttons"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -68,9 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="n°8"
+            android:text=""
             android:textColor="#666"
-            android:textSize="20sp"
+            android:textSize="21sp"
             android:textStyle="bold" />
         
         <ImageButton
