--- a/res/layout/fragment_level.xml
+++ b/res/layout/fragment_level.xml
@@ -10,10 +10,10 @@
             android:id="@+id/levelPictureBigLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
             android:gravity="center" >
 
             <ImageView
@@ -25,12 +25,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:adjustViewBounds="true"
+                android:antialias="true"
                 android:background="@drawable/photo_border_white"
                 android:paddingBottom="13dp"
                 android:paddingLeft="11dp"
                 android:paddingRight="14dp"
                 android:paddingTop="10dp"
-                android:antialias="true"
                 android:scaleType="centerInside" />
         </LinearLayout>
 
@@ -38,12 +38,12 @@
             android:id="@+id/levelInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:background="#00000000"
             android:layout_alignLeft="@+id/levelPictureBigLayout"
             android:layout_alignTop="@+id/levelPictureBigLayout"
-            android:layout_marginTop="-10dp"
             android:layout_marginLeft="-8dp"
+            android:layout_marginTop="-10dp"
+            android:adjustViewBounds="true"
+            android:background="#00000000"
             android:maxWidth="40dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_hints" />
@@ -56,9 +56,9 @@
             android:layout_alignRight="@+id/levelOpenedlayout"
             android:layout_below="@+id/levelPictureBigLayout"
             android:layout_centerVertical="true"
-            android:layout_marginTop="2dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="5dp"
+            android:layout_marginTop="2dp"
             android:gravity="center_horizontal"
             android:shadowColor="#cc000000"
             android:shadowDx="-1"
@@ -73,8 +73,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/levelName"
-            android:layout_marginRight="8dp"
             android:layout_marginLeft="5dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="22dp" >
 
             <LinearLayout
@@ -83,10 +83,10 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBottom="@+id/levelCheckButton"
                 android:layout_alignParentTop="true"
-            android:layout_marginLeft="10dp"
-	            android:layout_toLeftOf="@+id/levelCheckButton"
-	            android:layout_toRightOf="@+id/levelHintLetters"
                 android:layout_alignTop="@+id/levelCheckButton"
+                android:layout_marginLeft="10dp"
+                android:layout_toLeftOf="@+id/levelCheckButton"
+                android:layout_toRightOf="@+id/levelHintLetters"
                 android:gravity="center_vertical" >
 
                 <EditText
@@ -99,36 +99,36 @@
                     android:singleLine="true" />
             </LinearLayout>
 
-	        <ImageButton
-	            android:id="@+id/levelHintLetters"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-				android:layout_above="@+id/levelName"
-	            android:layout_marginTop="5dp"
-	            android:adjustViewBounds="true"
+            <ImageButton
+                android:id="@+id/levelHintLetters"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/levelName"
                 android:layout_alignParentLeft="true"
-	            android:background="#00000000"
-	            android:maxWidth="40dp"
-	            android:scaleType="fitCenter"
-	            android:src="@drawable/letter_writer" />
-	
-	        <TextView
-	            android:id="@+id/levelNbHints"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-				android:layout_alignRight="@+id/levelHintLetters"
-				android:layout_alignTop="@+id/levelHintLetters"
-	            android:background="@drawable/hints_shape"
-	            android:text="12"
-	            android:textStyle="bold"
-	            android:textColor="#eee"
-	            android:paddingLeft="4dp"
-	            android:paddingRight="4dp"
-	            android:layout_marginTop="-5dp"
-	            android:layout_marginRight="-4dp"
-	            android:includeFontPadding="false"
-	            android:textSize="10sp" />
-            
+                android:layout_marginTop="5dp"
+                android:adjustViewBounds="true"
+                android:background="#00000000"
+                android:maxWidth="40dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/letter_writer" />
+
+            <TextView
+                android:id="@+id/levelNbHints"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignRight="@+id/levelHintLetters"
+                android:layout_alignTop="@+id/levelHintLetters"
+                android:layout_marginRight="-4dp"
+                android:layout_marginTop="-5dp"
+                android:background="@drawable/hints_shape"
+                android:includeFontPadding="false"
+                android:paddingLeft="4dp"
+                android:paddingRight="4dp"
+                android:text="12"
+                android:textColor="#eee"
+                android:textSize="10sp"
+                android:textStyle="bold" />
+
             <Button
                 android:id="@+id/levelCheckButton"
                 android:layout_width="80dp"
@@ -181,6 +181,7 @@
             android:drawableLeft="@drawable/ic_wiki"
             android:drawablePadding="10dp"
             android:gravity="center_vertical"
+            android:linksClickable="false"
             android:shadowColor="#666"
             android:shadowDx="-1"
             android:shadowDy="1"
@@ -189,45 +190,7 @@
             android:textColor="#666"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:visibility="gone"
-            android:linksClickable="false" />
-        
-        <View
-            android:id="@+id/levelTutorialMask"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="#66000000"
             android:visibility="gone" />
-
-        <LinearLayout
-            android:id="@+id/levelTutorialLayout"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="#fff"
-            android:visibility="gone" 
-            android:orientation="vertical">
-        
-            <TextView 
-                android:id="@+id/levelTutorialTitle"
-                android:layout_width="match_parent"
-            	android:layout_height="wrap_content"
-            	android:text="Explications: 1/4" />
-
-            <TextView 
-                android:id="@+id/levelTutorialExplanation"
-                android:layout_width="match_parent"
-            	android:layout_height="wrap_content"
-            	android:text="Explications: 1/4" />
-            
-            
-            <Button 
-                android:id="@+id/levelTutorialNext"
-                android:layout_width="match_parent"
-            	android:layout_height="wrap_content"
-            	android:text="Ok" />
-            
-		</LinearLayout>
-        
     </RelativeLayout>
 
 </ScrollView>
