--- a/res/layout/fragment_list_sections.xml
+++ b/res/layout/fragment_list_sections.xml
@@ -8,7 +8,8 @@
         android:layout_width="match_parent"
     	android:layout_height="match_parent"
     	android:divider="@null"
-    	android:dividerHeight="0dp" />
+    	android:dividerHeight="0dp"
+    	android:cacheColorHint="#00000000" />
 
     <include layout="@layout/layout_loading_page"
         android:id="@+id/loadingView"
