--- a/res/layout/fragment_settings.xml
+++ b/res/layout/fragment_settings.xml
@@ -172,7 +172,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
         </LinearLayout>
-        <!-- 
+        
         <LinearLayout
             android:id="@+id/support_us_group_container"
             android:layout_width="wrap_content"
@@ -189,6 +189,7 @@
             android:paddingTop="2dp" >
 
             <RelativeLayout
+                android:id="@+id/rateAppContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -238,6 +239,7 @@
                     android:textStyle="bold" />
             </RelativeLayout>
 
+		<!-- 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -246,7 +248,6 @@
                 android:layout_marginRight="5dp"
                 android:layout_marginTop="2dp"
                 android:background="#88aaaaaa" />
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -296,8 +297,9 @@
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
-        </LinearLayout>
          -->
+        </LinearLayout>
+
     </RelativeLayout>
 
 </ScrollView>
